<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/PostText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_text"
            android:padding="5dp"
            android:textColor="@color/purple_500"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:padding="5dp" />
            <TextView
                android:id="@+id/likeCount"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/like_count"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/createdAt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/time"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>