<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/create_an_account"
            android:gravity="center"
            android:textSize="24sp"
            android:background="#89FF00"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/textview_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/textview_background"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/textview_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/textview_background"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="16dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/button_background"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/textview_option_signup"
               android:layout_width="0dp"
               android:layout_weight="2"
               android:layout_height="wrap_content"
               android:text="@string/already_have_an_account"
               android:textSize="14sp"
               android:textColor="@color/black"
               android:layout_margin="10dp"
               android:gravity="center"
               android:padding="8dp"/>

           <TextView
               android:id="@+id/textview_register_option"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/login"
               android:textSize="16sp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:layout_marginEnd="10dp"
               android:layout_marginTop="10dp"
               android:padding="8dp"/>

       </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="65dp" />


</androidx.constraintlayout.widget.ConstraintLayout>