<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:autofillHints=""
            android:inputType="text" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:layout_margin="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="14dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintLeft_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/button_login">
       <TextView
           android:id="@+id/textview_option"
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="wrap_content"
           android:text="@string/don_t_have_an_account"
           android:padding="10dp"
           android:gravity="center"
           android:layout_margin="10dp"
           android:textColor="@color/black"
           android:textSize="14sp"/>
       <TextView
           android:id="@+id/textview_register"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:text="@string/register"
           android:textStyle="bold"
           android:textAllCaps="true"
           android:layout_marginEnd="10dp"
           android:layout_marginTop="10dp"
           android:textColor="@color/black"
           android:textSize="16sp"/>

   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>